--- a/apps/ios/Signing.xcconfig
+++ b/apps/ios/Signing.xcconfig
@@ -5,8 +5,8 @@
 OPENCLAW_CODE_SIGN_STYLE = Manual
 OPENCLAW_DEVELOPMENT_TEAM = Y5PE65HELJ
 
-OPENCLAW_APP_BUNDLE_ID = ai.openclaw.ios
-OPENCLAW_SHARE_BUNDLE_ID = ai.openclaw.ios.share
+OPENCLAW_APP_BUNDLE_ID = yixuan.ai.openclaw.ios
+OPENCLAW_SHARE_BUNDLE_ID = yixuan.ai.openclaw.ios.share
 
 OPENCLAW_APP_PROFILE = ai.openclaw.ios Development
 OPENCLAW_SHARE_PROFILE = ai.openclaw.ios.share Development
